2013-01-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* luatex.c (mk_shellcmdlist): Simplify (sync with texmfmp.c).

2013-01-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pdf/pdfgen.w (write_stream_length): Cast length for printing.

2012-12-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/libluatex.am (luatex_*_ctangle, pdflua.c):
	Enable silent rules.

2012-11-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* lua/lkpselib.c: Use kpse_readable_file() with non-const arg.

2012-11-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* lua/lepdflib.cc: No need to test for Annot::decRefCnt with
	poppler 0.18 or better.

2012-11-06  Akira Kakuto  <kakuto@fuk.kinidai.ac.jp>

	* pdf/pdflistout.w: sync with r4471 (a bug fix by H. Henkel).

2012-10-13  Akira Kakuto  <kakuto@fuk.kinidai.ac.jp>

	* tex/texfileio.w: input by pipe was impossible. enable it.

2012-10-11  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* lua/luainit.w (lua_initialize): Free two malloc()ed strings.

2012-10-10  Akira Kakuto  <kakuto@fuk.kinidai.ac.jp>

	* luatex.c: Modify determination of fullpath for restricted shell
	escape commands.

2012-10-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Avoid TL vs W32TeX differences (from Akira).
	* luatex.h: Include "ptexlib.h" instead of <luatexdir/ptexlib.h>
	as in all other cases.
	* ptexlib.h: Use _MSC_VER instead of MSVC.
	* image/epdf.h: Change arg3 of extern void pdf_begin_obj() from
	bool to int, as declared and defined in pdf/pdfgen.[hw].
	FIXME: There should be only one extern declaration in one file.

2012-10-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	The openbsd compat library is no longer used.
	* image/epdf.h, lua/luainit.w, ptexlib.h, utils/utils.w:
	Drop #include "openbsd-compat.h".
	* am/libluatex.am, am/luatex.am: Remove OBSDCOMPAT_*.

2012-09-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* lua/luainit.w (parse_options): Avoid cast const => non-const.

2012-09-13  Akira Kakuto  <kakuto@fuk.kinidai.ac.jp>
